starting to put the front end together using css grid.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/css/style.css">
+    <link rel="stylesheet" href="./style/css/index.css">
     <title>Home</title>
 </head>
-<body class = "container" id ='home'>
-    <div class = "item navbar">
-        <div class = "sub-item">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-        </ul>
+
+<body id='home'>
+
+    <div class="container">
+
+        <div class="header">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="https://www.linkedin.com/in/benjamin-rademacher-408414156/">
+                <img src="./style/images/linkedin.png" alt="linkedIn">
+            </a>
+            <a href="https://github.com/Brademacher">
+                <img src="./style/images/GitHub-light.png" alt="github-light">
+            </a>
         </div>
+
+        <div class="title">
+            <p class="awesomeFont">B e n j a m i n R a d e m a c h e r</p>
+        </div>
+
     </div>
+    
 </body>
+
 </html>
