continuing to build website using css grid

--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/css/index.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="./style/css/about.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <title>About Me</title>
 </head>
 
 <body>
@@ -23,7 +24,23 @@
                 <img src="./style/images/GitHub-light.png" alt="github-light">
             </a>
         </div>
+    </div>
 
+    <h1>A Little About Me</h1>
+
+    <div class="content">
+        <p>Hello and welcome to my website! So a little about me - I'm an aspiring full-stack developer currently enrolled in
+            a 6 month coding bootcamp at the University of Minnesota. While I can't say it's been easy working full-time,
+            and taking on this much new materials, I can unaquivocally say it's been worth it. I'd like to take the skills
+            I've learned (and am still learning) to transition into a junior developer role</p>
+
+        <p>My hobbies include golf, snowboarding, gaming, coding, exercise, and (in case you couldn't tell by the theme) outdoors
+            activities. I've been known to rock climb, whenever possible as well!</p>
+
+        <p>While my current job focuses primary on using my communication skills and working in a team environment, I like the
+            idea of being sit down and focus on my own project. I feel like I focus better in a quieter environment, but
+            will not stray away from a conversation with my peers.</p>
+    </div>
 </body>
 
 </html>
