--- a/portfolio.html
+++ b/portfolio.html
@@ -7,14 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./style/css/portfolio.css" />
 </head>
 
 <body id="portfolio">
-
     <div class="container">
-
         <div class="header">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -29,40 +27,59 @@
 
     </div>
 
-    <div class="container text-center text-light pt-3">
-        <h2>Sample of My Work</h2>
-    </div>
+    <div class="projects">
 
-    <div class="container">
-
-        <div class="row">
+        <div>
             <a href="https://brademacher.github.io/Hangman/">
-                <img class="btn imageBtn" role="button" src="./assets/images/hangman.jpg" alt="hangman">
+                <img class="btnImg" role="button" src="./style/images/hangman.jpg" alt="hangman">
             </a>
+
+        </div>
+        <div>
             <a href="https://brademacher.github.io/Gem-Game/">
-                <img class="btn imageBtn" role="button" src="./assets/images/crystal.jpg" alt="crystal game">
+                <img class="btnImg" role="button" src="./style/images/crystal.jpg" alt="crystal game">
             </a>
+
+        </div>
+        <div>
             <a href="https://brademacher.github.io/Giphy-API/">
-                <img class="btn imageBtn" role="button" src="./assets/images/api.png" alt="giphy api">
+                <img class="btnImg" role="button" src="./style/images/giphy.png" alt="giphy api">
             </a>
+
+        </div>
+        <div>
             <a href="https://brademacher.github.io/Train-Time/">
-                <img class="btn imageBtn" role="button" src="./assets/images/train.gif" alt="train"> 
+                <img class="btnImg" role="button" src="./style/images/train.gif" alt="train">
             </a>
+
+        </div>
+        <div>
             <a href="https://mcale017.github.io/Group-Project-1/">
-                <img class="btn imageBtn" role="button" src="./assets/images/faces.jpg" alt="faces">
+                <img class="btnImg" role="button" src="./style/images/faces.jpg" alt="faces">
             </a>
+
+        </div>
+        <div>
             <a href="#">
-                <img class="btn imageBtn" role="button" src="./assets/images/rock-paper-scissors.png" alt="rock paper scissors">
+                <img class="btnImg" role="button" src="./style/images/scissors.png" alt="rock paper scissors">
             </a>
+
+        </div>
+        <div>
             <a href="#">
-                <img class="btn imageBtn" role="button" src="./assets/images/trivia.jpg" alt="trivia">
+                <img class="btnImg" role="button" src="./style/images/rpg.jpg" alt="trivia">
             </a>
+
+        </div>
+        <div>
             <a href="#">
-                <img class="btn imageBtn" role="button" src="./assets/images/rpg.jpg" alt="shop">
+                <img class="btnImg" role="button" src="./style/images/trivia.jpg" alt="shop">
             </a>
+
         </div>
 
     </div>
+
 
 </body>
 
