--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="./style/css/index.css">
     <title>Home</title>
 </head>
@@ -26,7 +27,7 @@
         </div>
 
         <div class="title">
-            <p class="awesomeFont">B e n j a m i n R a d e m a c h e r</p>
+            <p class="awesomeFont">Benjamin Rademacher</p>
         </div>
 
     </div>
