Editing front page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <title>Home</title>
 </head>
 
-<body id='home'>
+<body>
+    <div id="parallelogram">
+        <p id="name">Benjamin Rademacher</p>
+        <p id="subTitle">Content Creator | Problem Solver</p>
+    </div>
 
     <div class="container">
 
-        <div class="header">
+        <div class="nav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="portfolio.html">Portfolio</a>
@@ -22,16 +26,12 @@
                 <img src="./style/images/linkedin.png" alt="linkedIn">
             </a>
             <a href="https://github.com/Brademacher">
-                <img src="./style/images/GitHub-light.png" alt="github-light">
+                <img src="./style/images/GitHub-dark.png" alt="github-light">
             </a>
         </div>
-
-        <div class="title">
-            <p class="awesomeFont">Benjamin Rademacher</p>
-        </div>
-
+       
     </div>
-    
+    <div id="circle"></div>
 </body>
 
 </html>
